fixed styling on mobile

--- a/src/components/Content/content.module.scss
+++ b/src/components/Content/content.module.scss
@@ -9,7 +9,7 @@
 .header-container-mobile {
     display: flex;
     justify-content: center;
-    width: 80vw;
+    width: 100%;
     height: 30px;
     border-bottom: 1px solid #000;
 }
